try to fix some layout bugs

--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -30,18 +30,7 @@
     height: 100%;
 }
 
-.svg-container {
-    /* display: inline-block; */
-    /* position: relative; */
-    width: 100%;
-    /* padding-bottom: 100%; */
-    /* vertical-align: middle; */
-    /* overflow: hidden; */
+.svg-container svg {
+  max-width: 100%;
+  max-height: 100%;
 }
-
-/* .svg-content { */
-/*     display: inline-block; */
-/*     position: absolute; */
-/*     top: 0; */
-/*     left: 0; */
-/* } */
